--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
       <artifactId>jackson-mapper-asl</artifactId>
       <version>1.9.13</version>
     </dependency>
+    <dependency>
+      <groupId>com.thetransactioncompany</groupId>
+      <artifactId>cors-filter</artifactId>
+      <version>2.4</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>craver</finalName>
