--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <artifactId>cors-filter</artifactId>
       <version>2.4</version>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.0.0</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>craver</finalName>
@@ -54,8 +59,8 @@
         <version>2.5.1</version>
         <inherited>true</inherited>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
